--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<div class="content-parent">
-  <div class="content">
-    <h1>
-      Chuck Jokes!
-    </h1>
-    <ng-container *ngIf="joke">
-      <p>
-        {{ joke.value }}
-      </p>
-      <!-- {{ message | async | json }} -->
-    </ng-container>
-  </div>
-</div>
+<router-outlet></router-outlet>
