Added header and icon

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,5 +1,6 @@
 <div class="content-parent">
   <div class="content">
+    <img src="../../../assets/imgs/ninja.svg" height="80px" width="80px">
     <h1>
       Chuck Jokes!
     </h1>
@@ -7,7 +8,6 @@
       <p>
         {{ joke.value }}
       </p>
-      <!-- {{ message | async | json }} -->
     </ng-container>
   </div>
 </div>
