--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -2,8 +2,8 @@
   position: relative;
   text-align: center;
   height: 100vh;
-  background-color: #5822e5;
-  color: #fff;
+  // background-color: #24292E;
+  color: #212121;
 }
 
 .content {
