--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,19 +1,111 @@
-.content-parent {
+.header {
+  height: 56px;
+  background-color: #212121;
   position: relative;
-  text-align: center;
-  height: 100vh;
-  // background-color: #24292E;
-  color: #212121;
 }
 
-.content {
+.header-title {
+  text-align: center;
+  display: inline-block;
+  font-size: 20px;
+  color: #fff;
+  width: 100%;
+  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90%;
 }
 
 h1 {
+  font-size: 40px;
   margin: 20px;
+}
+
+h2 {
+  font-size: 30px;
+  margin: 20px;
+}
+
+h3 {
+  font-size: 18px;
+  margin: 20px;
+}
+
+ul {
+  font-size: 16px;
+}
+
+.sub-content {
+  margin: 10px;
+  display: inline-block;
+}
+
+.div-style {
+  text-align: center;
+  color: #fff;
+  padding: 40px 0 20px 0;
+}
+
+.points {
+  padding: 18px;
+  font-size: 20px;
+  text-align: left;
+}
+
+.innovation {
+  height: 100%;
+  background: #785ed2;
+  position: relative;
+}
+
+.innovation-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.do-you {
+  background: #d25e5e;
+}
+
+.idea {
+  background: #625ed2;
+}
+
+.collecting-idea {
+  background: #3a3939;
+}
+
+.presentation {
+  background: #6d5ed2;
+}
+
+.dev-demo {
+  background: #3a3939;
+}
+
+.marketing {
+  background: #4379ab;
+}
+
+.incentives {
+  background: #3a3939;
+}
+
+.your-ideas {
+  height: 100vh;
+  background: #3a3939;
+  position: relative;
+}
+
+.submit-button {
+  border: none;
+  width: 50%;
+  height: 40px;
+  background: #3db567;
+  color: #fff;
+  margin: 20px;
+  font-size: 16px;
 }
