changed the layout

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,137 +1,182 @@
-<div class="header">
-  <div class="header-title">Innovation</div>
-</div>
-<div class="div-style innovation">
-  <div class="innovation-center">
-    <img src="../../../assets/imgs/light-bulb.svg" height="180px" width="180px">
-    <h1>Innovation HUB</h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">
+        <img alt="blub" src="../../../assets/imgs/light-bulb.svg" height="28px" width="28px">
+      </a>
+      <p class="navbar-text">Innovation HUB
+        <!-- <button class="btn btn-danger pull-right">gfgf</button> -->
+      </p>
+    </div>
   </div>
-</div>
-<div class="div-style do-you">
-  <div class="sub-content">
-    <img src="../../../assets/imgs/conference.svg" height="180px" width="180px">
-    <h3>Do you want to be a PO your own idea?</h3>
-  </div>
-  <div class="sub-content">
-    <img src="../../../assets/imgs/trophy.svg" height="140px" width="140px">
-    <h3>Do you want to be recognised a super hero?</h3>
-  </div>
-  <div class="sub-content">
-    <img src="../../../assets/imgs/gem.svg" height="140px" width="140px">
-    <h3>Do you want to earn TCS gems ?</h3>
-  </div>
-</div>
-<div class="div-style your-ideas">
-  <div class="innovation-center">
-    <img src="../../../assets/imgs/question.svg" height="200px" width="200px">
-    <h2>What is your Idea ?</h2>
-  </div>
-</div>
+</nav>
 
-<div class="div-style idea">
-  <img src="../../../assets/imgs/idea.svg" height="180px" width="180px">
-  <h2>What can classify as an Idea ?</h2>
-  <div class="points">
-    <ul>
-      <li>Solves pain points in existing process/ implementation.</li>
-      <br>
-      <li>Can be anything out of the box/ unrelated to regular work but somehow relevant to airline business domain.</li>
-      <br>
-      <li>Can be a totally new technology trend.</li>
-      <br>
-      <li>Can be an existing idea but totally new to KLM or airline business domain.</li>
-    </ul>
+<div class="container-fluid content-wraper">
+  <div class="row" *ngIf="!userClickYes" [@fadeInOut]>
+    <div class="col-md-12 no-padding">
+      <div class="do-you">
+        <div class="center-parent">
+          <div class="center-content">
+            <div class="main-content">
+              <div class="logo">
+                <img src="../../../assets/imgs/conference.svg" height="180px" width="180px">
+              </div>
+              <div class="logo-title">
+                <h3>Do you want to be a <span class="po">PO</span> your own idea?</h3>
+              </div>
+              <div class="yes-button">
+                <button id="yesIwant" class="btn btn-success btn-block" (click)="yesIwant()">Yes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div class="div-style collecting-idea">
-  <img src="../../../assets/imgs/cloud-computing.svg" height="180px" width="180px">
-  <h2>Collection of ideas</h2>
-  <div class="points">
-    <ul>
-      <li>There is no bar on any discipline to come up with an idea.</li>
-      <br>
-      <li>Don’t think about the resources/ workload when proposing the idea, those will be facilitated.</li>
-      <br>
-      <li>Ideas can be submitted offline with short summary and type using provided form.</li>
-    </ul>
+  <div class="row" *ngIf="userClickYes" [@fadeInOut]>
+    <div class="col-md-12 no-padding">
+      <div class="div-style do-you-second">
+        <div class="row">
+          <div class="col-md-4 col-sm-4 col-xs-4 col-ld-4">
+            <img src="../../../assets/imgs/conference.svg" height="84px" width="84px">
+            <h3 class="do-you-points">Do you want to be a PO your own idea?</h3>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-4 col-ld-4">
+            <img src="../../../assets/imgs/trophy.svg" height="84px" width="84px">
+            <h3 class="do-you-points">Do you want to be recognised as super hero?</h3>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-4 col-ld-4">
+            <img src="../../../assets/imgs/gem.svg" height="84px" width="84px">
+            <h3 class="do-you-points">Do you want to earn the TCS gems ?</h3>
+          </div>
+        </div>
+        <div class="col-md-12 no-padding card-top">
+          <div class="scrolling-wrapper">
+            <div class="col-container">
+              <div class="col card">
+                <h2 class="card-title">Phase 1</h2>
+                <div class="card-body">
+                  <img src="../../../assets/imgs/idea.svg" height="80px" width="80px">
+                  <h2 class="card-subtitle">What can classify as an Idea ?</h2>
+                  <div class="points">
+                    <ul>
+                      <li>Solves pain points in existing process/ implementation.</li>
+                      <li>Can be anything out of the box/ unrelated to regular work but somehow relevant to airline
+                        business
+                        domain.</li>
+                      <li>Can be a totally new technology trend.</li>
+                      <li>Can be an existing idea but totally new to KLM or airline business domain.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col card">
+                <h2 class="card-title">Phase 2</h2>
+                <div class="card-body">
+                  <img src="../../../assets/imgs/cloud-computing.svg" height="108px" width="80px">
+                  <h2 class="card-subtitle">Collection of ideas</h2>
+                  <div class="points">
+                    <ul>
+                      <li>There is no bar on any discipline to come up with an idea.</li>
+                      <li>Don’t think about the resources/ workload when proposing the idea, those will be facilitated.</li>
+                      <li>Ideas can be submitted offline with short summary & type using provided form.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col card">
+                <h2 class="card-title">Phase 3</h2>
+                <div class="card-body">
+                  <img src="../../../assets/imgs/presentation.svg" height="96px" width="96px">
+                  <h2 class="card-subtitle">Presentation & Shortlisting</h2>
+                  <div class="points" style="font-size: 0.9em;">
+                    <ul>
+                      <li>A bi weekly connect to provide a pitching platform.</li>
+                      <li>Shortlisting based on uniqueness, potential & feasibility.</li>
+                      <li>If there is no challenge in implementation of an idea it can be pursued by the individual</li>
+                      <li>Shortlisted Ideas which need support will be facilitated resources</li>
+                      <li>Ideas can be improvised & shortlisted based on criteria.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col card">
+                <h2 class="card-title">Phase 4</h2>
+                <div class="card-body">
+                  <img src="../../../assets/imgs/development.svg" height="93px" width="93px">
+                  <h2 class="card-subtitle">Development & Internal Demo</h2>
+                  <div class="points" style="font-size: 0.82em;">
+                    <ul>
+                      <li>Small team will be assigned to develop idea into working prototype.</li>
+                      <li>Scope & Timeline should be agreed upon by development team & management.</li>
+                      <li>Once team has the prototype ready, there will be an internal demo & review will be done.</li>
+                      <li>When a working prototype has been refined & finalised it can be presented to other
+                        stakeholders
+                        (Eg. Other
+                        business domains within TCS KLM account, Other TCS accounts).</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col card">
+                <h2 class="card-title">Phase 5</h2>
+                <div class="card-body">
+                  <img src="../../../assets/imgs/digital-campaign.svg" height="67px" width="67px">
+                  <h2 class="card-subtitle" style="font-size: 20px;">Marketing & demos with Stake holders</h2>
+                  <div class="points" style="font-size: 0.95em;">
+                    <ul>
+                      <li>Demo slots on prominent forums across KLM B2C or B2E domains.</li>
+                      <li>Presentations to key KLM Stakeholders facilitated by TCS management.</li>
+                      <li>Entry to TCS internal innovation forums eg. Innovista.</li>
+                      <li>Entry to in TCS Innovation Incubator app which is viewed by every prominent client visitor of
+                        TCS
+                        KLM
+                        Chennai office.
+                      </li>
+                      <li>Visibility to senior TCS Management levels.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 no-padding">
+      <div class="incentives">
+        <img src="../../../assets/imgs/police-badge.svg" height="60px" width="60px">
+        <img src="../../../assets/imgs/clap.svg" height="60px" width="60px">
+        <img src="../../../assets/imgs/medal.svg" height="60px" width="60px">
+        <h2>Incentives</h2>
+        <div class="incentives-point">
+          <ul>
+            <li>TCS Gems for top ideas.</li>
+            <br>
+            <li>Recognition across TCS KLM account.</li>
+            <br>
+            <li>Chance to be featured in TCS Innovation Incubator app which provides visibility on both KLM &
+              TCSManagement
+              levels.</li>
+            <br>
+            <li>Increased Job Satisfaction & Motivation.</li>
+            <br>
+            <li>Possibilities to be involved in & drive implementation of new Opportunities arising out of idea.
+            </li>
+            <br>
+            <li>Feel like a product owner of your Idea!.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 no-padding">
+      <div class="submit-idea">
+        <h2 class="submit-idea-title">Submit You Idea !</h2>
+        <app-blub [isBlubOn]="isBlubOn"></app-blub>
+        <div class="submit-button">
+          <button id="submit" class="btn btn-success" (click)="submitIdea()">Submit</button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div class="div-style presentation">
-  <img src="../../../assets/imgs/presentation.svg" height="180px" width="180px">
-  <h2>Presentation & Shortlist</h2>
-  <div class="points">
-    <ul>
-      <li>
-        A bi weekly connect to provide a pitching platform.
-      </li>
-      <br>
-      <li>Shortlisting based on uniqueness, potential and feasibility.</li>
-      <br>
-      <li>If there is no challenge in implementation of an idea it can be pursued by the individual</li>
-      <br>
-      <li>Shortlisted Ideas which need support will be facilitated resources to be developed further into
-        working prototype</li>
-      <br>
-      <li>Ideas can be refined and considered again in case they become eligible based on shortlist criteria.</li>
-    </ul>
-  </div>
-</div>
-<div class="div-style dev-demo">
-  <img src="../../../assets/imgs/development.svg" height="180px" width="180px">
-  <h2>Development & Internal Demo</h2>
-  <div class="points">
-    <ul>
-      <li>Small team will be assigned to develop idea into working prototype.</li>
-      <br>
-      <li>Scope and Timeline should be agreed upon by development team and management.</li>
-      <br>
-      <li>Once team has the prototype ready, there will be an internal demo and review will be done.</li>
-      <br>
-      <li>When a working prototype has been refined and finalised it can be presented to other stakeholders (Eg. Other
-        business domains within TCS KLM account, Other TCS accounts).</li>
-    </ul>
-  </div>
-</div>
-<div class="div-style marketing">
-  <img src="../../../assets/imgs/digital-campaign.svg" height="180px" width="180px">
-  <h2>Marketing</h2>
-  <div class="points">
-    <ul>
-      <li>Demo slots on prominent forums across KLM B2C or B2E domains.</li>
-      <br>
-      <li>Presentations to key KLM Stakeholders facilitated by TCS management.</li>
-      <br>
-      <li>Entry to TCS internal innovation forums eg. Innovista.</li>
-      <br>
-      <li>Entry to in TCS Innovation Incubator app which is viewed by every prominent client visitor of TCS KLM
-        Chennai office.
-      </li>
-      <br>
-      <li>Visibility to senior TCS Management levels.</li>
-    </ul>
-  </div>
-</div>
-<div class="div-style collecting-idea">
-  <img src="../../../assets/imgs/police-badge.svg" height="100px" width="100px">
-  <img src="../../../assets/imgs/clap.svg" height="100px" width="100px">
-  <img src="../../../assets/imgs/medal.svg" height="100px" width="100px">
-  <h2>Incentives</h2>
-  <div class="points">
-    <ul>
-      <li>TCS Gems for top ideas.</li>
-      <br>
-      <li>Recognition across TCS KLM account.</li>
-      <br>
-      <li>Chance to be featured in TCS Innovation Incubator app which provides visibility on both KLM and TCSManagement
-        levels.</li>
-      <br>
-      <li>Increased Job Satisfaction and Motivation.</li>
-      <br>
-      <li>Possibilities to be involved in and drive implementation of new Opportunities arising out of idea.
-      </li>
-      <br>
-      <li>Feel like a product owner of your Idea!.</li>
-    </ul>
-  </div>
-  <button class="submit-button" type="button" (click)="submitIdea()">Submit Idea</button>
 </div>
