--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,111 +1,168 @@
-.header {
-  height: 56px;
-  background-color: #212121;
-  position: relative;
+.content-wraper {
+  padding-top: 56px;
 }
 
-.header-title {
-  text-align: center;
-  display: inline-block;
-  font-size: 20px;
-  color: #fff;
-  width: 100%;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
 }
 
-h1 {
-  font-size: 40px;
-  margin: 20px;
-}
-
-h2 {
-  font-size: 30px;
-  margin: 20px;
-}
-
-h3 {
-  font-size: 18px;
-  margin: 20px;
+.navbar-brand {
+  padding: 15px 27px;
 }
 
 ul {
-  font-size: 16px;
+  padding: 14px;
 }
 
-.sub-content {
-  margin: 10px;
-  display: inline-block;
+.row {
+  margin-right: 0;
+  margin-left: 0;
 }
 
-.div-style {
+
+.do-you {
+  background: #d25e5e;
+  height: 100vh;
+}
+
+.do-you-second {
+  background: #d25e5e;
+  padding: 30px 0 20px 0;
   text-align: center;
+}
+
+.navbar {
+  min-height: 58px !important;
+}
+
+.navbar-text {
+  margin-top: 19px;
   color: #fff;
-  padding: 40px 0 20px 0;
 }
 
-.points {
-  padding: 18px;
-  font-size: 20px;
-  text-align: left;
+.no-padding {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
-.innovation {
+.center-parent {
   height: 100%;
-  background: #785ed2;
   position: relative;
 }
 
-.innovation-center {
+.center-content {
+  width: 90%;
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.do-you {
+.logo-title {
+  color: #fff;
+  font-size: 20px;
+}
+
+.po {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.yes-button {
+  margin: 80px;
+}
+
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
   background: #d25e5e;
+
+  .card {
+    background: #2C6A91;
+    display: inline-block;
+    box-shadow: 0 2px 5px;
+    margin: 14px;
+    padding: 10px;
+    white-space: pre-wrap;
+  }
+
+  .card-title {
+    font-size: 24px;
+    color: #fff;
+    margin: 0;
+    padding: 10px;
+    text-align: left;
+  }
+
+  .card-subtitle {
+    font-size: 22px;
+    color: #fff;
+    margin: 0;
+    padding: 24px 0px 0px 0px;
+    font-weight: bolder;
+    text-align: center;
+  }
+
+  .card-body {
+    text-align: center;
+  }
+
+  .points {
+    padding: 12px;
+    color: #fff;
+    line-height: 2em;
+    text-align: left;
+  }
 }
 
-.idea {
-  background: #625ed2;
-}
-
-.collecting-idea {
-  background: #3a3939;
-}
-
-.presentation {
-  background: #6d5ed2;
-}
-
-.dev-demo {
-  background: #3a3939;
-}
-
-.marketing {
-  background: #4379ab;
+.do-you-points {
+  font-size: 12px;
+  color: #fff;
+  margin: 0;
+  padding: 10px;
 }
 
 .incentives {
-  background: #3a3939;
+  background: #444;
+  padding: 40px 0 10px 0px;
+  color: #fff;
+  text-align: center;
 }
 
-.your-ideas {
-  height: 100vh;
-  background: #3a3939;
-  position: relative;
+.incentives-point {
+  padding-left: 16px;
+  text-align: left;
 }
 
 .submit-button {
-  border: none;
-  width: 50%;
-  height: 40px;
-  background: #3db567;
+  padding: 20px;
+  text-align: center;
+}
+
+.col-container {
+  // display: table;
+  // width: 100%;
+}
+
+.col {
+  // display: table-cell!important;
+  // padding: 16px;
+}
+
+.submit-idea {
+  background: #444;
+}
+
+.submit-idea-title {
+  text-align: center;
+  margin: 0;
+  padding: 10px;
   color: #fff;
-  margin: 20px;
-  font-size: 16px;
+}
+
+.btn-success {
+  background-color: #5eb947;
 }
