--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -168,13 +168,6 @@ ul {
 
 .col-container {
   position: relative;
-  // display: table;
-  // width: 100%;
-}
-
-.col {
-  // display: table-cell!important;
-  // padding: 16px;
 }
 
 .submit-idea {
@@ -193,7 +186,7 @@ ul {
 }
 
 
-@-webkit-keyframes blinker {
+@keyframes blinker {
   from {
     opacity: 1.0;
   }
@@ -205,13 +198,15 @@ ul {
 
 .blink {
   text-decoration: blink;
-  -webkit-animation-name: blinker;
-  -webkit-animation-duration: 0.6s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
-  -webkit-animation-direction: alternate;
+  animation-name: blinker;
+  animation-duration: 0.6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
   float: right;
 }
+
+
 
 .moving-background {
   height: 100vh !important;
@@ -222,10 +217,10 @@ ul {
   height: 300px;
   padding-top: 120px;
   box-sizing: border-box;
-  -webkit-animation: slide 20s linear infinite;
+  animation: slide 20s linear infinite;
 }
 
-@-webkit-keyframes slide {
+@keyframes slide {
   from {
     background-position: 0 0;
   }
@@ -233,4 +228,47 @@ ul {
   to {
     background-position: -400px 0;
   }
+}
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
+}
+
+.fade-in.one {
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+.fade-in.two {
+  -webkit-animation-delay: .7s;
+  -moz-animation-delay:.7s;
+  animation-delay: .7s;
+}
+
+.fade-in.three {
+  -webkit-animation-delay: 1.1s;
+  -moz-animation-delay: 1.1s;
+  animation-delay: 1.1s;
+}
+
+.submit-text{
+  padding: 20px;
+  text-align: center;
+  color: #fff;
 }
