--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -154,7 +154,9 @@
                     </div>
                   </div>
                   <div class="col card card5">
-                    <h2 class="card-title">Phase 5</h2>
+                    <h2 class="card-title" (click)="scrollTo('.incentives')">Phase 5
+                        <img class="pull-right" src="../../../assets/imgs/right-chevron.svg" height="22px" width="22px"
+                          class="blink"></h2>
                     <div class="card-body">
                       <img src="../../../assets/imgs/digital-campaign.svg" height="67px" width="67px">
                       <h2 class="card-subtitle" style="font-size: 20px;">Marketing & demos with Stake holders</h2>
